fixed email link, added scrollbars to textboxes

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -4,6 +4,7 @@ a:link {
 
 .Sidebar {
   height: 100%;
+  min-width: 200px;
   width: 20%;
   position: fixed;
   top: 0%;
@@ -11,6 +12,7 @@ a:link {
   text-align: center;
   align-items: center;
   background: #576d79;
+  overflow: auto;
 }
 
 .SidebarButton {
