--- a/src/css/Education.css
+++ b/src/css/Education.css
@@ -21,10 +21,12 @@
   background-color: rgba(128, 128, 128, 0.75);
   bottom: 20%;
   left: 25%;
+  right: 20%;
   border-radius: 20px;
   text-align: left;
   color: white;
   font-family: Times;
   font-size: 30px;
   padding: 20px;
+  overflow: auto;
 }
